syntax = "proto3";

package instill.model.v1alpha;

// Protocol Buffers Well-Known Types
import "google/protobuf/struct.proto";

// Protobuf standard
import "google/protobuf/timestamp.proto";

// Google api
import "google/api/resource.proto";
import "google/api/field_behavior.proto";

////////////////////////////////////
// Spec represents a spec data model
message Spec {
  // Spec documentation URL
  string documentation_url = 1 [ (google.api.field_behavior) = OUTPUT_ONLY ];
  // Spec specification
  google.protobuf.Struct specification = 2
      [ (google.api.field_behavior) = REQUIRED ];
}

///////////////////////////////////////////////////////////////////
// ModelDefinition represents the definition of a model
message ModelDefinition {
  option (google.api.resource) = {
    type : "api.instill.tech/ModelDefinition"
    pattern : "model-definitions/{uuid}"
  };

  // ModelDefinition resource name. It must have the format of
  // "model-definitions/{model-definition}"
  string name = 1 [ (google.api.field_behavior) = OUTPUT_ONLY ];
  // ModelDefinition ID in UUIDv4
  string uid = 2 [ (google.api.field_behavior) = OUTPUT_ONLY ];
  // ModelDefinition resource ID (the last segment of the resource name) used to
  // construct the resource name.
  string id = 3 [ (google.api.field_behavior) = OUTPUT_ONLY ];

  // ModelDefinition display official title
  string title = 4 [ (google.api.field_behavior) = OUTPUT_ONLY ];
  // ModelDefinition documentation url
  string documentation_url = 5 [ (google.api.field_behavior) = OUTPUT_ONLY ];
  // ModelDefinition icon
  string icon = 6 [ (google.api.field_behavior) = OUTPUT_ONLY ];
  // ModelDefinition spec
  Spec spec = 7 [ (google.api.field_behavior) = OUTPUT_ONLY ];
  // ModelDefinition public flag, i.e., true if this definition is available to
  // all workspaces
  bool public = 8 [ (google.api.field_behavior) = OUTPUT_ONLY ];
  // ModelDefinition custom flag, i.e., true if this is a custom model
  // definition
  bool custom = 9 [ (google.api.field_behavior) = OUTPUT_ONLY ];
  // ModelDefinition create time
  google.protobuf.Timestamp create_time = 10
      [ (google.api.field_behavior) = OUTPUT_ONLY ];
  // ModelDefinition update time
  google.protobuf.Timestamp update_time = 11
      [ (google.api.field_behavior) = OUTPUT_ONLY ];
}

// View represents a view of any resource. The resource view is implemented by
// adding a parameter to the method request which allows the client to specify
// which view of the resource it wants to receive in the response.
enum View {
  // View: UNSPECIFIED, equivalent to BASIC.
  VIEW_UNSPECIFIED = 0;
  // View: BASIC, server response only include basic information of the resource
  VIEW_BASIC = 1;
  // View: FULL, full representation of the resource
  VIEW_FULL = 2;
}

// ListModelDefinitionRequest represents a request to list all supported model
// definitions
message ListModelDefinitionRequest {
  // Page size: the maximum number of resources to return. The service may
  // return fewer than this value. If unspecified, at most 10 users will be
  // returned. The maximum value is 100; values above 100 will be coereced to
  // 100.
  int64 page_size = 1 [ (google.api.field_behavior) = OPTIONAL ];
  // Page token
  string page_token = 2 [ (google.api.field_behavior) = OPTIONAL ];
  // Definition view (default is VIEW_BASIC)
  View view = 3 [ (google.api.field_behavior) = OPTIONAL ];
}

// ListModelDefinitionResponse represents a response to list all supported model
// definitions
message ListModelDefinitionResponse {
  // a list of ModelDefinition instances
  repeated ModelDefinition model_definitions = 1;
  // Next page token
  string next_page_token = 2;
  // Total count of model definitions
  int64 total_size = 3;
}

// GetModelDefinitionRequest represents a request to query a model definition
message GetModelDefinitionRequest {
  // Resource name of the model definition.
  // For example "model-definitions/{uuid}"
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference).type = "api.instill.tech/ModelDefinition"
  ];
}

// GetModelDefinitionResponse represents a response for a model definition
message GetModelDefinitionResponse {
  // A model definition instance
  ModelDefinition model_definition = 1;
}
